# CMake-Game-Solution

./: CMakeLists.txt
BasicLighting/: CMakeLists.txt
BasicLighting/assets/: scene.gltf
BasicLighting/include/: Camera.hpp  Engine.hpp  Lighting.hpp  Window.hpp  model.hpp  shader.hpp  stb_image.h
BasicLighting/shaders/: floor.frag  shader.frag  shader.vert  texture.frag  texture.vert
BasicLighting/src/: BasicLighting.cpp  Camera.cpp  Engine.cpp  Window.cpp  model.cpp  shader.cpp
